<resources>
    <string name="app_name">Veratus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="day_view">Day View</string>
    <string name="month_view">Month View</string>
    <string name="mycalendar">MyCalendar</string>
    <string name="profile">Profile</string>
    <string name="today">Today</string>
    <string name="reward">Reward</string>
    <string name="suggestion">Suggestion</string>
    <string name="about">About</string>
    <string name="log_out">Log out</string>

    <string-array name="period_arrays">
        <item>Select Period</item>
        <item>Every day</item>
        <item>Every week</item>
        <item>Every mouth</item>
        <item>Every year</item>

    </string-array>


    <string-array name="until_arrays">
        <item> Duration</item>
        <item>1 week</item>
        <item>1 mouth</item>
        <item>1 year</item>


     </string-array>


</resources>
